# sparse_wf

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config.yaml  debug.yaml  graph.py  main.py  mcmc.py  model.py  pyproject.toml  run_hf.py  run_hf.yaml  stdout.txt  test.py  test.sh  train.py  train_with_seml.py  zhai_et_al_2023_HC_df2-svp.chk  zhai_et_al_2023_HC_df2-svp.h5
.github/workflows/: post-commit.yaml  ruff.yaml  test-main.yaml
analysis/: analyze_eigenvectors.py  plot_singular_values.py  update_dict.py
analysis/data/: singular_values_0.npy  singular_values_1.npy  singular_values_100.npy  singular_values_101.npy  singular_values_102.npy  singular_values_2.npy
config/: H20.yaml  benzene.yaml  debugging.yaml  debugging_full.yaml  default.yaml  n2.yaml
config/seml/: cumulene.yaml  cumulene_excited_ground.yaml  cumulene_lrz.yaml  distributed.yaml  h_chain.yaml  michael_hgx.yaml  n2.yaml  n2_lrz.yaml  n2_pseudopotentials.yaml  zhai_et_al.yaml
config/slurm_templates/: daml.sh  hgx.sh  leonardo.sh  lrz.sh  vsc5.sh
data/: energies.csv  geometries.json
data/zhai_et_al_2023/df2-svp/: hc.xyz  hfe.xyz  hfe2.xyz  hs.xyz
data/zhai_et_al_2023/df2-tzvp/: hc.xyz  hfe.xyz  hfe2.xyz  hs.xyz
notebooks/: add_triplet.ipynb  addition_test.ipynb  attention.ipynb  chk  cumulene_pp.ipynb  fwd_lap.ipynb  hf_analysis.ipynb  low_rank.ipynb  n2.csv  n2.ipynb  pseudopotentials.ipynb  run_1.csv  run_2.csv  run_3.csv  sparse_fwd_lap.ipynb  test.h5  test.ipynb  zhai.ipynb
sparse_wf/: api.py  jax_utils.py  mcmc.py  preconditioner.py  pretraining.py  tree_utils.py  update.py
sparse_wf/model/: __init__.py  graph_utils.py  moon.py  utils.py
sparse_wf/preliminary_experiments/dynamic_laplacian/: main.py  model.py
sparse_wf/preliminary_experiments/low_rank/: cutoff.py  graph.py  job.sh  main.py  mcmc.py  model.py  stdout.txt
sparse_wf/preliminary_experiments/parallelization/: job_sharding.sh  stdout_test_distributed.txt  stdout_test_sharding.txt  test_distributed.py  test_sharding.py
sparse_wf/preliminary_experiments/parallelization/distributed/: job_distributed.sh
sparse_wf/preliminary_experiments/parallelization/per_sample_gradients/: per_sample_gradients.py
sparse_wf/preliminary_experiments/parallelization/sharding/: job_sharding.sh
sparse_wf/preliminary_experiments/sparse_mpnn/: benchmark.py  get_neighbours.py  job.sh  main.py  model.py  moon_timings.txt  stdout.txt  utils.py
sparse_wf/systems/: constants.py  element.py
src/: convert_checkpoint.py
src/sparse_wf/: api.py  auto_requeue.py  geometry.py  hamiltonian.py  jax_utils.py  loggers.py  mcmc.py  optim.py  plot_utils.py  preconditioner.py  pretraining.py  pseudopotentials.py  run_debug.py  run_hf.py  scf.py  setup_calculations.py  setup_cutoff_transfer.py  spin_operator.py  static_args.py  system.py  train.py  train_with_config.py  tree_utils.py  update.py
src/sparse_wf/model/: __init__.py  dense_ferminet.py  envelopes.py  graph_utils.py  jastrow.py  moon.py  moon_old.py  my_moon.py  new_model.py  new_sparse_model.py  orbitals.py  sparse_fwd_lap.py  two_step_moon.py  utils.py  wave_function.py
src/sparse_wf/plot_scripts/ablation/: ablation.py
src/sparse_wf/plot_scripts/acene/: acene.py  acene_for_talk.py
src/sparse_wf/plot_scripts/cumulene_pp/: get_cumulene_data.py  plot_cumulene.py  plot_hf.py  plot_scaling_laws.py
src/sparse_wf/plot_scripts/fe2s2/: fe2s2.py  fe2s2_extrapolation.py  get_fe2s2_data.py  plot_fe2s2.py
src/sparse_wf/plot_scripts/ferrocene/: .gitignore  ferrocene_bar_plot.py  ferrocene_hf.py  get_ferrocene_data.py  orca_energies.csv  plot_ferrocene.py
src/sparse_wf/plot_scripts/hchains/: get_hchain_data.py  plot_hchains.py
src/sparse_wf/plot_scripts/interactions/: .gitignore  formic_acid.py  get_interaction_data.py  gradient_matching.py  plot_interaction_optcurves.py  plot_interactions for_talk.py  plot_interactions.py  plot_variance_extrapolation.py  variance_extrapolation_same_slope.py
src/sparse_wf/plot_scripts/scaling/: plot_scaling.py  plot_scaling_for_talk.py  run_scaling_tests.py
src/sparse_wf/preliminary_experiments/: inspect_ecp_params.py
src/sparse_wf/preliminary_experiments/FeS/: run_cas.py
src/sparse_wf/preliminary_experiments/N2/: N2_mrci.csv  N2_pp.py
src/sparse_wf/preliminary_experiments/N2_jastrow/: plot_N2_jastrow_results.py
src/sparse_wf/preliminary_experiments/ablation/: ablation.csv  ablation.py
src/sparse_wf/preliminary_experiments/acene/: acene.ipynb  acene.py  acene_for_talk.py
src/sparse_wf/preliminary_experiments/autoqueue/: detect_signal.py  test_signal.py
src/sparse_wf/preliminary_experiments/benzene_dimer/: .gitignore  benzene_cas.py  benzene_dimer.py  benzene_dimer_barchart.py  benzene_dimer_evals.py  cutoff_transfer.py  get_benzene_data.py  inspect_walkers.py  plot_benzene_dimer.py  plot_pitonak_et_al.py  variance_extrapolation.py
src/sparse_wf/preliminary_experiments/cluster_updates/: analyze_proposal.py  analyze_samples.py
src/sparse_wf/preliminary_experiments/corannulene/: corannulene_diss.xyz  corannulene_equ.xyz  get_corannulene_data.py  plot_corannulene.py
src/sparse_wf/preliminary_experiments/cumulene/: cumulene_09-03.csv  cumulene_09-10.csv  cumulene_09-10_old.csv  get_cumulene_data.py  plot_cumulene_09-03.py  plot_cumulene_09-10.py  plot_cumulene_09-12.py  plot_cumulene_09-26.py  plot_energy.py
src/sparse_wf/preliminary_experiments/cumulene_pp/: cumulene.tex  cumulene_pp_aggregated.csv  get_cumulene_data.py  orca_energies.csv  plot_cumulene.py  plot_cumulene_pp.py  plot_hf.py  plot_scaling_laws.py  run_cas.py  scaling_laws.py
src/sparse_wf/preliminary_experiments/cutoff_extrapolation/: extrapolation_fit.py  get_data.py
src/sparse_wf/preliminary_experiments/datasets/: benzene_dimer.py  cumulene_quintuplet.py  cutoff_transfer.csv  ferrocene.py  ferrocene_ox.xyz  ferrocene_red.xyz  (+3 more)
src/sparse_wf/systems/: molecule.py  scf.py
src/tests/: test_sparse_fwd_lap.py
tests/: low_rank.ipynb  sparse_fwd_lap.ipynb  test_fwd_lap.py  test_low_rank.py  test_sparse_fwd_lap.py  test_sparse_fwd_new_model.py  utils.py
(+124 files in other folders)
