[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "sparse_wf"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "jax[cuda12-pip]==0.4.29",
    # lates jax with monolitic cuda12
    "flax",
    "optax",
    "chex",
    "tqdm",
    "einops",
    "numpy",
    "matplotlib",
    "folx",
    "pyscf",
    "seml[ssh_forward]",
    "tqdm",
    "wandb",
    "pytest",
    "wonderwords",
    "argcomplete",
    "nvidia-cublas-cu12==12.6.0.22",
    "nvidia-cuda-cupti-cu12==12.6.37",
    "nvidia-cuda-nvcc-cu12==12.6.20",
    "nvidia-cuda-runtime-cu12==12.6.37",
    "nvidia-cudnn-cu12==9.3.0.75",
    "nvidia-cufft-cu12==11.2.6.28",
    "nvidia-cusolver-cu12==11.6.4.38",
    "nvidia-cusparse-cu12==12.5.2.23",
    "nvidia-nccl-cu12==2.22.3",
    "nvidia-nvjitlink-cu12==12.6.20",
]

[project.optional-dependencies]
bokeh = [
    "bokeh>=3.6.0",
    "chromedriver-binary>=132.0.6821.0.0",
    "selenium>=4.26.1",
]
profiling = ["tensorboard-plugin-profile>=2.17.0", "tensorflow>=2.18.0"]

[tool.ruff]
line-length = 120
exclude = ["src/sparse_wf/preliminary_experiments/*"]

[tool.ruff.lint]
# jaxtyping violates F722: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
# Do NOT ignore F821, because this can mask other legitimate errors. Instead use leading spaces in jaxtyping annotations to avoid this
# https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
ignore = ["F722"]

[tool.mypy]
strict = false
exclude = ['src/sparse_wf/preliminary_experiments', 'analysis']
disable_error_code = ["valid-type", "import-untyped", "import-not-found"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-n", "auto"]

[tool.uv]
constraint-dependencies = [
    "scipy<=1.12.0", # required for jax==0.4.23
    "numpy<2.0.0",   # required for jax==0.4.23
    # "nvidia_cudnn_cu12<9.0", # required for jax==0.4.23
]

dev-dependencies = [
    "ruff",
    "pre-commit",
    "ipykernel>=6.29.5",
    "mypy>=1.12.0",
    "wandb-workspaces",
    "seaborn>=0.13.2",
    "pytest-xdist>=3.6.1",
]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
]

[project.scripts]
sparse-wf-run = "sparse_wf.train_with_config:train_with_config"
sparse-wf-setup = "sparse_wf.setup_calculations:setup_calculations"
