[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<3.13" # < 3.13 required for tensorflow/numpy compatiblity for profiling
name = "sparse_wf"
version = "0.0.1"
readme = "README.md"
dependencies = [
    # "jax[cuda12_pip]==0.4.29", # latest jax with monolitic cuda12
    "jax[cuda12]>=0.4.35,<0.6",
    "flax",
    "optax",
    "chex",
    "tqdm",
    "einops",
    "numpy",
    "matplotlib",
    "folx",
    # "folx>=0.2.14", # requires jax>=0.4.35
    "pyscf>=2.8",
    "seml[ssh_forward]",
    "tqdm",
    "wandb",
    "pytest",
    "wonderwords",
    "argcomplete",
    "pyscf-dispersion>=1.2.0",
]

[project.optional-dependencies]
bokeh = [
    "bokeh>=3.6.0",
    "chromedriver-binary>=132.0.6821.0.0",
    "selenium>=4.26.1",
]
profiling = [
    "tensorboard-plugin-profile>=2.17.0",
    "tensorflow>=2.18.0"
]

[tool.ruff]
line-length = 120
exclude = ["src/sparse_wf/preliminary_experiments/*"]

[tool.ruff.lint]
# jaxtyping violates F722: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
# Do NOT ignore F821, because this can mask other legitimate errors. Instead use leading spaces in jaxtyping annotations to avoid this
# https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error

# E741 is a warning about using 'l' as a variable name, which is common in physics
ignore = ["F722", "E741"]

[tool.mypy]
strict = false
exclude = ['src/sparse_wf/preliminary_experiments', 'src/sparse_wf/plot_scripts','analysis', 'runs']
disable_error_code = ["valid-type", "import-untyped", "import-not-found"]

[tool.pytest_env]
JAX_PLATFORMS = "cpu"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-n", "auto"]

[tool.uv]
constraint-dependencies = [
    # "scipy<=1.12.0", # required for jax==0.4.23
    # "numpy<2.0.0",   # required for jax==0.4.23
    # "nvidia_cudnn_cu12<9.0", # required for jax==0.4.23
]
dev-dependencies = [
    "ruff",
    "pre-commit",
    "ipykernel>=6.29.5",
    "mypy>=1.12.0",
    "wandb-workspaces",
    "seaborn>=0.13.2",
    "pytest-xdist>=3.6.1",
    "scienceplots>=2.1.1",
    "pytest-env>=1.1.5",
    "jinja2>=3.1.4",
]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
]

[project.scripts]
sparse-wf-run = "sparse_wf.train_with_config:train_with_config"
sparse-wf-setup = "sparse_wf.setup_calculations:setup_calculations"
sparse-wf-setup-cutoff-transfer = "sparse_wf.setup_cutoff_transfer:main"
